Bug 96051 - FILESAVE: Roundtrip any PPTX file with Shapes creates invalid OOXML
Summary: FILESAVE: Roundtrip any PPTX file with Shapes creates invalid OOXML
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:5.2.0 target:5.1.0.2 target:5...
Keywords: bibisected, bisected, filter:pptx, regression
: 92221 95166 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-11-25 06:25 UTC by Luke
Modified: 2016-10-25 19:11 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Original with just a Rectangle (28.98 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2015-11-25 06:25 UTC, Luke
Details
Correctly roundtripped with 4.3 (31.75 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2015-11-25 06:26 UTC, Luke
Details
Error when roundtripped with 5.1 (34.95 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2015-11-25 06:27 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2015-11-25 06:25:49 UTC
Created attachment 120775 [details]
Original with just a Rectangle

Any OOXML presentation with shapes will be corrupted on roundtrip with Impress >= 4.4. 

Steps to reproduce:
1. In PowerPoint create a presentation.
2. Insert shape
3. Save
4. Open in Impress <= 4.3
5. Save
6. Open in PowerPoint
7. Repeat 4-7 with Impress > 4.3

With Impress 4.4 and newer, PowerPoint reports that it "Found a problem with the content and can attempt a repair."
Comment 1 Luke 2015-11-25 06:26:36 UTC
Created attachment 120776 [details]
Correctly roundtripped with 4.3
Comment 2 Luke 2015-11-25 06:27:18 UTC
Created attachment 120777 [details]
Error when roundtripped with 5.1
Comment 3 A (Andy) 2015-11-25 23:36:11 UTC
Reproducible with LO 5.0.3.2, Win 8.1
Comment 4 raal 2015-11-28 16:51:21 UTC
This seems to have begun at the below commit.
Adding Cc: to Zolnai Tamás ; Could you possibly take a look at this one?
Thanks
 a517caa859adca6b8c80c8529bfe7bfb68c61ddf is the first bad commit
commit a517caa859adca6b8c80c8529bfe7bfb68c61ddf
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Sun Mar 15 02:49:47 2015 +0800

    source-hash-b3d50feaa87b670baf68288974005ac26ad31736
    
    commit b3d50feaa87b670baf68288974005ac26ad31736
    Author:     Zolnai Tamás <tamas.zolnai@collabora.com>
    AuthorDate: Tue Sep 16 17:51:12 2014 +0200
    Commit:     Zolnai Tamás <tamas.zolnai@collabora.com>
    CommitDate: Wed Sep 17 09:59:50 2014 +0200
    
        bnc#584721: Import subtitle block to master slides
    
        For some reason subtitle block was skipped for
        layouts. It seems we can enable it for layout too,
        it appears well on master slides.
    
        Change-Id: I23ec7d4fcce045099bfca9e94a8c9335beaf7468
Comment 5 Luke 2015-12-08 02:27:03 UTC
*** Bug 95166 has been marked as a duplicate of this bug. ***
Comment 6 Luke 2015-12-08 02:40:36 UTC
Bumping this to major because a) it involves a "loss of function" b) marked older Bug 95166 as a dupe and someone else considered that one to be major.
Comment 7 Luke 2015-12-09 22:07:25 UTC
*** Bug 92221 has been marked as a duplicate of this bug. ***
Comment 8 Luke 2015-12-09 22:11:24 UTC
Andras was CC'd on a dupe and has done a ton of work in this area. Feel free to remove.
Comment 9 Robinson Tryon (qubit) 2015-12-10 01:18:42 UTC Comment hidden (obsolete)
Comment 10 Commit Notification 2015-12-22 09:49:05 UTC
Zolnai Tamás committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a9db17aabc3ac970e6e4754e28310d20138144d9

tdf#96051: FILESAVE: Roundtrip any PPTX file with Shapes creates invalid OOXML

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Luke 2015-12-31 15:51:47 UTC
Verified FIXED in Build ID: 4251e676bb818cde1989b9077b1497f1d9b0cbdc

Thank you Zolnai. Any idea why the subtitle block causes Impress to generate such different OOXML in files with shapes?
Comment 12 Commit Notification 2016-01-04 17:05:08 UTC
Zolnai Tamás committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fe9971de7e792960dc88fc562f2db04fee48cc2d&h=libreoffice-5-1

tdf#96051: FILESAVE: Roundtrip any PPTX file with Shapes creates invalid OOXML

It will be available in 5.1.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Tamás Zolnai 2016-01-10 15:07:07 UTC
(In reply to Luke from comment #11)
> Verified FIXED in Build ID: 4251e676bb818cde1989b9077b1497f1d9b0cbdc
> 
> Thank you Zolnai. Any idea why the subtitle block causes Impress to generate
> such different OOXML in files with shapes?

No idea.
Comment 14 Commit Notification 2016-01-11 16:21:45 UTC
Zolnai Tamás committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e18c062be49042945644db438608a6e58c7dc98a&h=libreoffice-5-0

tdf#96051: FILESAVE: Roundtrip any PPTX file with Shapes creates invalid OOXML

It will be available in 5.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.