tdf#96051: FILESAVE: Roundtrip any PPTX file with Shapes creates invalid OOXML

Revert "bnc#584721: Import subtitle block to master slides"
This reverts commit b3d50feaa87b670baf68288974005ac26ad31736.

It seems the imported subtitle block makes export corrupt the
output. Better to have a valid output.

Change-Id: I1a3d4f03e4fa0c4431a5394495682a1b9d7677bc
(cherry picked from commit a9db17aabc3ac970e6e4754e28310d20138144d9)
Reviewed-on: https://gerrit.libreoffice.org/20923
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>